misc/examples/deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-pvc-example
  labels:
    app: nginx
  namespace: misc
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node-1
      volumes:
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc-example
